--- a/index.html
+++ b/index.html
@@ -47,8 +47,34 @@
         import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
 
         createChat({
-            webhookUrl: 'https://cajaabogadossalta.app.n8n.cloud/webhook/e985d15f-b2f6-456d-be15-97e0b1544a40/chat'
-        });
+                    webhookUrl: 'https://cajaabogadossalta.app.n8n.cloud/webhook/e985d15f-b2f6-456d-be15-97e0b1544a40/chat',
+                    webhookConfig: {
+                        method: 'POST',
+                        headers: {}
+                    },
+                    target: '#n8n-chat',
+                    mode: 'window',
+                    chatInputKey: 'chatInput',
+                    chatSessionKey: 'sessionId',
+                    loadPreviousSession: true,
+                    metadata: {},
+                    showWelcomeScreen: false,
+                    defaultLanguage: 'en',
+                    initialMessages: [
+                        'Hi there! 👋',
+                        'My name is Nathan. How can I assist you today?'
+                    ],
+                    i18n: {
+                        en: {
+                            title: 'Hi there! 👋',
+                            subtitle: "Start a chat. We're here to help you 24/7.",
+                            footer: '',
+                            getStarted: 'New Conversation',
+                            inputPlaceholder: 'Type your question..',
+                        },
+                    },
+                    enableStreaming: false,
+                });
     </script>
 </body>
 </html>
