--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                     showWelcomeScreen: false,
                     defaultLanguage: 'en',
                     initialMessages: [
-                        'Hi there! 👋',
-                        'My name is Nathan. How can I assist you today?'
+                        'Hola soy el Asistente Virtual de Caja Abogados Salta.',
+                        '¿Como puedo ayudarte hoy?'
                     ],
                     i18n: {
                         en: {
