se cambio el lenguaje

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                     ],
                     i18n: {
                         en: {
-                            title: 'Hi there! 👋',
-                            subtitle: "Start a chat. We're here to help you 24/7.",
+                            title: 'Hola soy el Asistente Virtual de Caja Abogados Salta.',
+                            subtitle: "¿Como puedo ayudarte hoy?",
                             footer: '',
-                            getStarted: 'New Conversation',
-                            inputPlaceholder: 'Type your question..',
+                            getStarted: 'Nueva Conversacion',
+                            inputPlaceholder: 'Escribe tu pregunta..',
                         },
                     },
                     enableStreaming: false,
